Fix status jumping bug
This part is too complex.
The thread can get very fancy and it's impossible to handle all use-cases without a lot of code.
Solution is just fading all of them out while loading.

--- a/src/app.css
+++ b/src/app.css
@@ -273,6 +273,14 @@ a.mention span {
 .timeline.contextual > li.thread .replies li:before {
   left: calc(50px + 16px + 16px);
 }
+.timeline.contextual.loading > li:not(.hero) {
+  opacity: 0.2;
+  pointer-events: none;
+  background-image: none !important;
+}
+.timeline.contextual.loading > li:not(.hero):before {
+  content: none !important;
+}
 
 .timeline-deck.compact .status {
   max-height: max(25vh, 160px);
